# pyuvstarter

./: .gitignore  DEVELOPMENT.md  LICENSE  NEW_SESSION_PROMPT.md  README.md  create_demo.sh  create_demo2.sh  dev_force_reinstall_to_fix_outdated_pyuvstarter_code.sh  merge-backup-info.txt  merge.md  merge.md.backup-20250716-033226  pyproject.toml  pyuvstarter.py  reduce_verbose_output.md  uv_conflict.md
.claude/: settings.json
.github/workflows/: ci.yml
notes/: 2025_11_12_01_09_investigation-session-summary.md  jupyter-ci-bug-reproduction.md
tests/: run_all_tests.sh  test_configuration.py  test_cross_platform.py  test_dependency_migration.py  test_error_handling.py  test_extraction_fix.py  test_import_fixing.py  test_jupyter_pipeline.py  test_legacy_migration.sh  test_mixed_package_availability.py  test_new_project.sh  test_notebook_support.sh  test_project_structure.py  test_utils.py  test_wheel_unavailability.py
tests/fixtures/: README.md
tests/fixtures/basic_project_structures/simple_python_project/: README.md  main.py
tests/fixtures/basic_project_structures/src_layout_package/: README.md  pyproject.toml
tests/fixtures/basic_project_structures/src_layout_package/src/myapp/: __init__.py  main.py  utils.py
tests/fixtures/cross_platform_scenarios/unicode_filenames/: README.md  naive_data_processor.py  naïve_data_processor.py  数据处理器.py
tests/fixtures/dependency_scenarios/complex_requirements_txt/: README.md  main.py  requirements.txt
tests/fixtures/import_fixing_scenarios/src_layout_relative_imports/: README.md  pyproject.toml
tests/fixtures/import_fixing_scenarios/src_layout_relative_imports/src/myapp/: __init__.py  config.py  main.py  models.py  utils.py
tests/fixtures/jupyter_notebooks/: README.md  data_analysis_notebook.ipynb
tests/test_import_projects/flat_layout_pkg_with_deep_relative_imports/: pyproject.toml
tests/test_import_projects/flat_layout_pkg_with_deep_relative_imports/anotherproject/: __init__.py  submodule.py
tests/test_import_projects/flat_layout_pkg_with_deep_relative_imports/anotherproject/subfolder/: __init__.py  deep_module.py
tests/test_import_projects/legacy_requirements_with_relative_imports/: requirements.txt
tests/test_import_projects/legacy_requirements_with_relative_imports/legacyproject/: __init__.py  data_processor.py  main.py
tests/test_import_projects/mixed_relative_and_absolute_imports/mixedproject/: __init__.py  config.py  utils.py
tests/test_import_projects/pkg_with_absolute_imports_control/: pyproject.toml
tests/test_import_projects/pkg_with_absolute_imports_control/goodproject/: __init__.py  helpers.py  main.py
tests/test_import_projects/pkg_without_pyproject_but_relative_imports/nopyproject/: __init__.py  main.py  utils.py
tests/test_import_projects/script_project_no_pyproject/: main.py  utils.py
tests/test_import_projects/src_layout_pkg_with_relative_imports/: pyproject.toml
tests/test_import_projects/src_layout_pkg_with_relative_imports/src/myproject/: __init__.py  main.py  utils.py
