[project]
name = "pyuvstarter"
version = "0.1.5" # You can update the version as you develop
description = "A script to automate Python project setup using uv, focusing on pyproject.toml, and configuring VS Code."
readme = "README.md"
requires-python = ">=3.8" # The pyuvstarter.py script aims for 3.8+ compatibility

authors = [
  { name = "Andrew Hundt", email = "ATHundt@gmail.com" },
]

# Dependencies needed for pyuvstarter.py itself to run.
# Currently, it uses standard library modules, so this can be empty.
dependencies = [
    "toml>=0.10.2",
]


# This section defines the command-line script.
[project.scripts]
pyuvstarter = "pyuvstarter:main" # Creates `pyuvstarter` command from pyuvstarter.py's main()

# This section tells uv/pip how to build your project.
[build-system]
requires = ["setuptools>=61.0"] # Specifies setuptools as the build tool
build-backend = "setuptools.build_meta" # The function setuptools uses to build
backend-path = ["."] # Tells setuptools to look for build-related files in the current directory.

# This section explicitly tells setuptools to include pyuvstarter.py as a module.
# The correct key is 'py-modules' (with a hyphen).
[tool.setuptools]
py-modules = ["pyuvstarter"]
