[project]
name = "pyuvstarter"
version = "0.2.0" # You can update the version as you develop
description = "A script to automate Python project setup using uv, focusing on pyproject.toml, and configuring VS Code."
readme = "README.md"
requires-python = ">=3.8" # The pyuvstarter.py script aims for 3.8+ compatibility

authors = [
  { name = "Andrew Hundt", email = "ATHundt@gmail.com" },
]

# Dependencies needed for pyuvstarter.py itself to run.
dependencies = [
    "toml>=0.10.2",
    "pathspec>=0.11.0", # For .gitignore pattern matching
    "typer>=0.9.0", # CLI framework
    "rich>=10.0.0", # Rich terminal output (typer's optional dependency)
    "pydantic>=2.0.0", # Data validation and settings management
    "pydantic-settings>=2.0.0", # Settings management with Pydantic
    "typing-extensions>=4.0.0", # Backports of typing features
    "pip-requirements-parser>=32.0.0", # For robust requirements.txt parsing
    "packaging>=20.0", # For parsing requirement specifiers
    "tqdm>=4.67.1",
]


# This section defines the command-line script.
[project.scripts]
pyuvstarter = "pyuvstarter:app" # Creates `pyuvstarter` command from Typer app

# This section tells uv/pip how to build your project.
[build-system]
requires = ["setuptools>=61.0"] # Specifies setuptools as the build tool
build-backend = "setuptools.build_meta" # The function setuptools uses to build
backend-path = ["."] # Tells setuptools to look for build-related files in the current directory.

# This section explicitly tells setuptools to include pyuvstarter.py as a module.
# The correct key is 'py-modules' (with a hyphen).
[tool.setuptools]
py-modules = ["pyuvstarter"]

